Bug 154909 - Assertion `gtk_tree_view_get_model(m_pTreeView) && "don't select when frozen, select after thaw. Note selection doesn't survive a freeze"' failed.
Summary: Assertion `gtk_tree_view_get_model(m_pTreeView) && "don't select when frozen,...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.6.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2023-04-19 14:09 UTC by Xisco Faulí
Modified: 2023-04-19 17:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (11.53 KB, application/vnd.oasis.opendocument.text)
2023-04-19 14:09 UTC, Xisco Faulí
Details
bt with debug symbols (11.14 KB, text/plain)
2023-04-19 15:42 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-04-19 14:09:49 UTC
Created attachment 186788 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Go to sidebar - Manage Changes
3. Right Click - Sort by - Date
4. Click on Accept All
5. Undo

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cbd7ce7ea647a2608e1d12035a634a1637482672
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-04-19 14:10:36 UTC
Hi Julien,
since you fixed bug 154740 I thought you might be interested in this issue
Comment 2 Julien Nabet 2023-04-19 15:42:47 UTC
Created attachment 186793 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I reproduced the assertion.
Comment 3 Julien Nabet 2023-04-19 15:56:35 UTC
patch for master branch waiting for review here:
https://gerrit.libreoffice.org/c/core/+/150642

Xisco: thank you for the ping! If you find similar cases, don't hesitate to cc me again! :-)
Comment 4 Commit Notification 2023-04-19 17:40:44 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/730b329b51797254aca58843ad7937ee7662cf7f

tdf#154909: Assertion dont select when frozen in sw/redlndlg.cxx

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.