tdf#154909: Assertion dont select when frozen in sw/redlndlg.cxx

relevant part of bt:
6  0x00007f9968f0b3b0 in (anonymous namespace)::GtkInstanceTreeView::make_sorted() (this=0x55a0e2935d20) at /home/julien/lo/libreoffice/vcl/unx/gtk3/gtkinst.cxx:15222
7  0x00007f99438be35e in SwRedlineAcceptDlg::InsertParents(unsigned long, unsigned long) (this=0x55a0e2846f50, nStart=1, nEnd=1) at /home/julien/lo/libreoffice/sw/source/uibase/misc/redlndlg.cxx:932
8  0x00007f99438bf72b in SwRedlineAcceptDlg::CalcDiff(unsigned long, bool) (this=0x55a0e2846f50, nStart=1, bChild=false) at /home/julien/lo/libreoffice/sw/source/uibase/misc/redlndlg.cxx:557
9  0x00007f99438bab7a in SwRedlineAcceptDlg::Activate() (this=0x55a0e2846f50) at /home/julien/lo/libreoffice/sw/source/uibase/misc/redlndlg.cxx:416

Full bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=186793

It seems there can be several levels of freeze since the caller of make_sorted() does:
 930     rTreeView.thaw();
 931     if (m_pTable->IsSorted())
 932         rTreeView.make_sorted();

so I would have supposed it's not frozen.

Change-Id: Ia1ce00aaa09efed05f614ca57cfe11cacf2da4b3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150642
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>